unpackaged/main/default/objects/ValidationConfigurations__c/ValidationConfigurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Validation Configurations</label>
</CustomObject>