unpackaged/main/default/objects/ValidationConfigurations__c/fields/Bypass_Fax_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Fax_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Fax Validation</label>
    <type>Checkbox</type>
</CustomField>