unpackaged/main/default/objects/ValidationConfigurations__c/fields/Bypass_Phone_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Phone_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Phone Validation</label>
    <type>Checkbox</type>
</CustomField>