unpackaged/main/default/objects/ValidationConfigurations__c/fields/Bypass_SMS_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_SMS_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass SMS Validation</label>
    <type>Checkbox</type>
</CustomField>